MET-4977 Changed dereferenceEntities method